# ubuntu-secure

./: .gitignore  COMPLETE_SOLUTION.md  DECENTRALIZED_URLS.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.txt  DEPLOY_BLOCKCHAIN.sh  DEPLOY_NOW.sh  DEPLOY_PUBLIC_BLOCKCHAIN.md  DEPLOY_TO_REAL_BLOCKCHAIN.md  Dockerfile  ENABLE_PUBLIC_ACCESS.md  FINAL_CID.txt  FINAL_DEPLOYMENT.md  FINAL_SOLUTION_DOCUMENT.md  FLOW_OF_EXECUTION.md  FLOW_OF_LOGIC.md  GITLAB_PUSH_SUMMARY.md  HOW_TO_ACCESS.md  HOW_TO_USE_FINAL.md  IPFS_HASH_LINUX_BLOCKCHAIN.txt  IPFS_HASH_LINUX_BLOCKCHAIN_FINAL.txt  IPFS_HASH_WORKING.txt  LATEST_CID.txt  LATEST_URL.txt  LINUX_AS_BLOCKCHAIN_PHASE1.md  LINUX_BLOCKCHAIN_COMPLETE.md  LOGIC.md  Makefile  PHASE2_SUMMARY.md  PHASE_1_README.md  PROGRESS.md  PUBLIC_BLOCKCHAIN_DEPLOYMENT.md  PUBLIC_BLOCKCHAIN_URLS.md  Procfile  QUICK_FIX_IPFS.md  README.md  README_DEPLOY.md  START_TERMINAL.sh  UNBREAKABLE_ANALYSIS.md  WASM_BLOCKCHAIN_SOLUTION.md  (+67 more)
1/: DEVELOPMENT_METHODOLOGY.md  MINIMAL_DEPLOYMENT_PLAN.md  README-DEPLOYMENT.md  SYSTEM_ARCHITECTURE.md  USE_NOW.md  cloud-init.yaml  deploy-public.sh  deploy_aws.sh  docker-compose-blockchain.yml  emergency_revocation.py  one-command-deploy.sh  package.json  quick-deploy.sh  syscall_hook.c  terminal-server.js  test_real_protection.sh
2/: PRODUCTION_DEPLOYMENT_CHECKLIST.md  README_REAL_IMPLEMENTATION.md  UBUNTU_ON_BLOCKCHAIN_COMPLETE.md  _config.yml  blockchain_boot.py  blockchain_bridge.py  blockchain_state_manager.py  consensus_daemon.py  conversation-251-messages.jsonl  deploy_real_ubuntu_blockchain.sh  docker-compose-production.yml  fixes.md  mpc_compute.py  start.sh
2/local-deploy/: docker-compose.yml
2/pallet-ubuntu-os/src/: lib.rs
2/public/: terminal.html
compute-currency-project/: P2P_COMPUTE_IMPLEMENTATION.md
doc/: linux-blockchain-sync.html  linux-standalone.html
docs/: arch-linux.md  filesystem.md  index.html  networking.md
ipfs-data/: config  telemetry_uuid
ipfs-data/autoconf/be549059b58f0ab1/: .last-refresh
ipfs-data/datastore/: 000002.ldb  LOG  MANIFEST-000008
linux-as-blockchain/: linux-blockchain.html  linux-chain.js
linux-blockchain-deploy/: app.js
local-deploy/: app.py
serverless-linux/: serverless.html  serverless.js
ubuntu-blockchain-node/: Cargo.toml
ubuntu-blockchain-node/node/: Cargo.toml
ubuntu-blockchain-node/pallets/ubuntu-secure/: Cargo.toml
ubuntu-blockchain-node/pallets/ubuntu-secure/src/: lib.rs  weights.rs
ubuntu-blockchain-node/runtime/: Cargo.toml
ubuntu-secure-master/: .gitignore  .revoked_devices.json  HOW_TO_USE.md  app.json  blockchain_filesystem.py  client.py  complete_syscall_blockchain.c  demo_one_command.sh  deploy_script.sh  deploy_ubuntu_blockchain_complete.sh  deployment_server.py  docker-compose-substrate.yml  index.html  public-index.html  secure_boot.py  start_deployment_server.sh  stop_services.sh  substrate_emergency_revocation.py  syscall_blockchain_hook.c  test_integrated.py  test_one_command_deploy.sh  test_phase_1_4.py  web-interface.html
ubuntu-wasm-blockchain/: index.html  package-lock.json  package.json
zero-hosting-saas/: COMPUTE_CURRENCY_LOGIC.md  index.html
